add group_list partial and show routes

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,43 +1,8 @@
 <div class="container">
   <h1 cal>Tiscord</h1>
 
-  <div class="group-list">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new-group">
-        +
-      </button>
-
-      <div class="modal fade" id="new-group" tabindex="-1" role="dialog" aria-labelledby="new-group-Label" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            
-            <%= form_with(model: @group, local: true, html: {class: "my-4"}) do |form| %>
-              <div class="modal-body">
-                <h3>New Group</h3>
-                <div class="form-group">
-                  <%= form.text_field :name, placeholder: "Group name" %>
-                </div>
-              </div>
-
-              <div class="modal-footer">
-                <div class="actions">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <%= form.submit "Create", class:"btn btn-primary" %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-
-      <% @groups.each do |group| %>
-        <div class="card mb-2">
-          <div class="card-body">
-            <h5 class="card-title text-muted">
-              <%= group.name %>
-            </h5>
-          </div>
-        </div>
-      <% end %>
+  <div>
+    <%= render  "group_list", newgroup: @newgroup, groups: @groups %>
   </div>
   
   
