--- a/app/views/groups/_group_list.html.erb
+++ b/app/views/groups/_group_list.html.erb
@@ -1,7 +1,3 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new-group">
-  +
-</button>
-
 <div class="modal fade" id="new-group" tabindex="-1" role="dialog" aria-labelledby="new-group-Label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -36,4 +32,8 @@
     </div>
   <% end %>
 <% end %>
+
+<button type="button" class="btn btn-primary w-100" data-toggle="modal" data-target="#new-group">
+  +
+</button>
 
