--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,21 @@
-<div class="group-list">
-  <%= render  "group_list", group: @group, newgroup:@newgroup, groups: @groups %>
+<div class="wrap d-flex vh-100">
+  <div class="group-list bg-dark">
+    <%= render  "group_list", newgroup:@newgroup, groups: @groups %>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row h-100">
+      <div class="col-3">
+        <div class="baord_list bg-secondary h-100">
+          <%= render  "/boards/board_list", group: @group, board: @board, boards: @boards %>
+        </div>
+      </div>
+
+      <div class="col-9">
+        <div class="messages bg-info h-100">
+          message
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
