create board show

--- a/app/views/boards/_board_list.html.erb
+++ b/app/views/boards/_board_list.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       
-      <%= form_with(model: board, url: group_boards_path(group) ,local: true, html: {class: "my-4"}) do |form| %>
+      <%= form_with(model: newboard, url: group_boards_path(group) ,local: true, html: {class: "my-4"}) do |form| %>
         <div class="modal-body">
           <h3>New board</h3>
           <div class="form-board">
