add message list

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -13,7 +13,7 @@
 
       <div class="col-9">
         <div class="messages bg-info h-100">
-          <%= render  "/messages/message_list", group: @group, board: @board, message: @message, messages: @messages %>
+          <%= render  "/messages/message_list", group: @group, board: @board, messages: @messages, message: @message %>
         </div>
       </div>
     </div>
