--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -7,7 +7,7 @@
     <div class="row h-100">
       <div class="col-3">
         <div class="baord_list bg-secondary h-100">
-          <%= render  "/boards/board_list", group: @group, boards: @boards, newboard: @newboard %>
+          <%= render  "/boards/board_list", group: @group, boards: @boards, board: @board, newboard: @newboard %>
         </div>
       </div>
 
