--- a/app/views/boards/_board_list.html.erb
+++ b/app/views/boards/_board_list.html.erb
@@ -22,13 +22,15 @@
 </div>
 
 <% boards.each do |b| %>
-  <div class="card mb-2">
-    <div class="card-body">
-      <h5 class="card-title text-muted">
-        <%= b.name %>
-      </h5>
+  <%= link_to  group_board_path(group, b) do %>
+    <div class="card mb-2">
+      <div class="card-body">
+        <h5 class="card-title text-muted">
+          <%= b.name %>
+        </h5>
+      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
 
 <button type="button" class="btn btn-primary w-100" data-toggle="modal" data-target="#new-board">
