--- a/app/views/groups/_group_list.html.erb
+++ b/app/views/groups/_group_list.html.erb
@@ -24,7 +24,7 @@
 <% groups.each do |g| %>
   <!------g.boards.first.id????------------------------------->
   <%= link_to group_board_path(g, g.boards.first.id)  do %> 
-    <div class="card mb-2">
+    <div class="card mb-2 mx-2 ">
       <div class="card-body">
         <h5 class="card-title text-muted">
           <%= g.name %>
