--- a/app/views/messages/_message_list.html.erb
+++ b/app/views/messages/_message_list.html.erb
@@ -17,12 +17,10 @@
   </div>
 <% end %>     
 
-<%= form_with(model: message, url: group_board_messages_path(group, board) ,local: true, html: {class: "my-4"}) do |form| %>
-  <div class="form-group row">
-    <%= form.text_field :content, placeholder: "輸入訊息" %>
-  </div>
+<%= form_with(model: message, url: group_board_messages_path(group, board) ,local: true, html: {class: "form-inline w-100"}) do |form| %>
 
-  <div class="form-group row">
-    <%= form.submit "Create", class:"btn btn-primary" %>
-  </div>
+    <div class="form-group w-100 row">
+      <%= form.text_field :content, placeholder: "輸入訊息", class: "col-9 form-control " %>
+      <%= form.submit "Create", class:"col-3 btn btn-primary" %>
+    </div>
 <% end %>
