--- a/app/views/messages/_message_list.html.erb
+++ b/app/views/messages/_message_list.html.erb
@@ -2,10 +2,9 @@
   <%= render partial: "/messages/message", collection: messages %>  
 </div>
 
-<%= form_with(model: message, url: group_board_messages_path(group, board) ,local: true, html: {class: "form-inline w-100"}) do |form| %>
-
-    <div class="form-group w-100 row">
-      <%= form.text_field :content, placeholder: "輸入訊息", class: "col-9 form-control " %>
-      <%= form.submit "Create", class:"col-3 btn btn-primary" %>
-    </div>
+<%= form_with(model: message, url: group_board_messages_path(group, board) ,local: true, html: {class: "message-form form-inline w-100 fixed-bottom"}) do |form| %>
+  <div class="form-group w-100 mx-0 row">
+    <%= form.text_field :content, placeholder: "輸入訊息", class: "col-9 form-control " %>
+    <%= form.submit "Create", class:"col-3 btn btn-primary" %>
+  </div>
 <% end %>
