--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,14 +1,23 @@
-<div id="main-content" class="wrap d-flex">
-  <div class="group-list bg-dark h-100">
-    <%= render  "/groups/group_list", newgroup:@newgroup, groups: @groups %>
-  </div>
+<div id="main-content">
+  <div class="container-fluid p-0">
+    <div class="row no-gutters">
+      <div class="col-1 col">
+        <div class="group-list bg-dark h-100 overflow-auto">
+          <%= render  "/groups/group_list", newgroup:@newgroup, groups: @groups %>
+        </div>
+      </div>
 
-  <div class="baord-list bg-secondary h-100">
-    <%= render  "/boards/board_list", group: @group, boards: @boards, board: @board, newboard: @newboard %>
-  </div>
+      <div class="col-2 col">
+        <div class="baord-list bg-secondary h-100 overflow-auto">
+          <%= render  "/boards/board_list", group: @group, boards: @boards, board: @board, newboard: @newboard %>
+        </div>
+      </div>
 
-  <div class="messages-list bg-info w-100 h-100">
-    <%= render  "/messages/message_list", group: @group, board: @board, messages: @messages, message: @message %>
+      <div class="col-9 col">
+        <div class="messages-list bg-info h-100">
+          <%= render  "/messages/message_list", group: @group, board: @board, messages: @messages, message: @message %>
+        </div>
+      </div>
+    </div>
   </div>
-      
 </div>
