--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,16 +1,12 @@
 <div class="card mb-2">
   <div class="card-body">
-    <h5 class="card-title text-muted">
-      <%= message.user.username %>
-      <small>
-        -
-        <%= time_ago_in_words message.created_at %>
-        age
-      </small>
-    </h5>
-
     <div class="card-text lead mb-2">
-      <%= message.content %>
+      <small>
+        <%= message.user.username %>
+        - <%= time_ago_in_words message.created_at %> ago
+      </small>
+
+      <p><%= message.content %></p>
     </div>
   </div>
 </div>
