--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
-<nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-0">
   <a class="navbar-brand" href="#">Tiscord</a>
-  
+
     <div class="navbar-nav ml-auto">
       <% if user_signed_in? %>
         <%= link_to "登出", destroy_user_session_path, method: :delete, class:"nav-link" %>
