--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,12 +1,14 @@
-<div class="card mb-2">
-  <div class="card-body">
-    <div class="card-text lead mb-2">
-      <small>
-        <%= message.user.username %>
-        - <%= time_ago_in_words message.created_at %> ago
-      </small>
+<div class="card mb-2 px-2 flex-row">
+  <div class="py-2 mr-2">
+    <%= image_tag message.user.avatar.url, width: "40px", class: "rounded-circle" %>
+  </div>
 
-      <p><%= message.content %></p>
-    </div>
+  <div class="card-text">
+    <small>
+      <%= message.user.username %>
+      - <%= time_ago_in_words message.created_at %> ago
+    </small>
+
+    <p><%= message.content %></p>
   </div>
 </div>
