--- a/app/frontend/stylesheets/style.scss
+++ b/app/frontend/stylesheets/style.scss
@@ -4,19 +4,17 @@ body {
 }
 
 #main-navbar{
-  height: 50px;
+  height: 8vh;
+  margin-bottom: 1px;
 }
 
 #main-content{
-  margin-top: 50px;
-  // height: 100%;
-//   position: relative;
-//   width: 100%;
-//   font-size: 0;
+  position: relative;
+  top: 50px;
 
 
   .row {
-    height: 100vh;
+    height: 93vh;
 
     .col {
       height: 100%;
@@ -25,27 +23,18 @@ body {
   }
 }
 
-#left-content {
-  height: 100%;
+.group-list {
+  .group-item{
+    width: 50px;
+    height: 50px;
+  }
 }
 
-.group-list {
-//   display: inline-block;
-//   width: 70px;
-width: 100%;
-}
 
 .baord-list {
-//   display: inline-block;
-//   width: 160px;
 width: 100%;
 }
 
-.messages-list {
-//   display: inline-block;
-width: 100%;
-//   width: calc(100% - 230px);
-}
 
 #board-messages{
   margin-bottom: 15%;
@@ -58,7 +47,3 @@ width: 100%;
   bottom: 0;
   padding-left: 25%;
 }
-
-// .modal-backdrop {
-//   z-index: -5;
-// }
