--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -8,13 +8,13 @@
       </div>
 
       <div class="col-2 col">
-        <div class="baord-list bg-secondary h-100 overflow-auto">
+        <div class="baord-list bg-dark border border-secondary h-100 overflow-auto">
           <%= render  "/boards/board_list", group: @group, boards: @boards, board: @board, newboard: @newboard %>
         </div>
       </div>
 
       <div class="col-9 col">
-        <div class="messages-list bg-info h-100">
+        <div class="messages-list bg-info"></div>
           <%= render  "/messages/message_list", group: @group, board: @board, messages: @messages, message: @message %>
         </div>
       </div>
