--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-2 px-2 flex-row" id=message-<%= message.id %>>
+<div class="card mb-2 px-2 flex-row bg-secondary text-light" id=message-<%= message.id %>>
   <div class="py-2 mr-2">
     <%= image_tag message.user.avatar.url, width: "40px", class: "rounded-circle" %>
   </div>
