--- a/app/frontend/stylesheets/style.scss
+++ b/app/frontend/stylesheets/style.scss
@@ -1,17 +1,16 @@
 body {
   overflow: hidden;
-  height: 100vh;
+  // height: 100vh;
 }
 
 #main-navbar{
-  height: 8vh;
+  height: 50px;
   margin-bottom: 1px;
 }
 
 #main-content{
   position: relative;
   top: 50px;
-
 
   .row {
     height: 93vh;
@@ -28,11 +27,6 @@ body {
     width: 50px;
     height: 50px;
   }
-}
-
-
-.baord-list {
-width: 100%;
 }
 
 
