--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
-<nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-0">
+<nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-secondary text-white border-bottom border-white fixed-top py-0">
   <a class="navbar-brand" href="#">Tiscord</a>
 
     <div class="navbar-nav ml-auto">
       <% if user_signed_in? %>
         <%= link_to "登出", destroy_user_session_path, method: :delete, class:"nav-link" %>
       <% else %>
-        <%= link_to  "登入", new_user_session_path, class:"nav-link" %>
-        <%= link_to  "註冊", new_user_registration_path, class:"nav-link" %>
+        <%= link_to "登入", new_user_session_path, class:"nav-link" %>
+        <%= link_to "註冊", new_user_registration_path, class:"nav-link" %>
       <% end %>
     </div>
 </nav>
