--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -9,7 +9,7 @@
 
       <div class="col-2">
         <div class="baord-list bg-dark border border-secondary h-100 overflow-auto">
-          <% if @boards.present? %>
+          <% if @group.present? %>
             <%= render "/boards/board_list", group: @group, boards: @boards %>
           <% end %>
         </div>
@@ -17,7 +17,7 @@
 
       <div class="col-9 overflow-auto">
         <div class="message-list bg-dark border border-secondary h-100 overflow-auto px-1">
-          <% if @messages.present? %>
+          <% if @board.present? %>
             <%= render "/messages/message_list", group: @group, board: @board, messages: @messages %>
           <% end %>
         </div>
