--- a/app/views/messages/_message_list.html.erb
+++ b/app/views/messages/_message_list.html.erb
@@ -1,10 +1,12 @@
-<div id="board-messages" class="h-100">
-  <%= render partial: "/messages/message", collection: messages %>
+<div id="message-items">
+  <% if messages.present? %>
+    <%= render partial: "/messages/message", collection: messages %>
+  <% end %>
 </div>
 
 <%= form_with(model: Message.new, url: group_board_messages_path(group, board) ,local: true, html: {class: "message-form form-inline"}) do |form| %>
   <div class="form-group w-100 mx-0">
-    <%= form.text_field :content, placeholder: "輸入訊息", class: "col-9 form-control " %>
+    <%= form.text_field :content, placeholder: "輸入訊息", class: "col-9 form-control bg-secondary text-light" %>
     <%= form.submit "Create", class:"col-3 btn btn-primary" %>
   </div>
 <% end %>
