--- a/app/views/messages/_message_list.html.erb
+++ b/app/views/messages/_message_list.html.erb
@@ -1,3 +1,7 @@
+<div class="message-board">
+  <h3 class="text-secondary text-center py-1 m-0" data-board="<%= board.id %>">--<%= board.name %>--</h3>
+</div>
+
 <div id="message-items">
   <% if messages.present? %>
     <%= render partial: "/messages/message", collection: messages %>
