--- a/app/views/messages/_message_list.html.erb
+++ b/app/views/messages/_message_list.html.erb
@@ -1,4 +1,4 @@
-<div class="message-board">
+<div class="message-board border-bottom border-secondary">
   <h3 class="text-secondary text-center py-1 m-0" data-board="<%= board.id %>">--<%= board.name %>--</h3>
 </div>
 
