--- a/app/frontend/stylesheets/style.scss
+++ b/app/frontend/stylesheets/style.scss
@@ -41,6 +41,11 @@ body {
     .time {
       font-size: 10px;
     }
+    p {
+      word-wrap: break-word;
+      white-space: pre-wrap;
+      word-break: break-all;
+    }
   }
   .me {
     flex-direction: row-reverse !important;
@@ -57,6 +62,16 @@ body {
   bottom: 2px;
   height: 52px;
   width: calc(100% - 25px);
+
+  .message-input {
+    flex-grow: 1;
+  }
+
+  .message-btn {
+    display: none;
+    background-color: #3978ce;
+    color: #fff;
+  }
 }
 
 ::placeholder {
