--- a/app/views/messages/_message_list.html.erb
+++ b/app/views/messages/_message_list.html.erb
@@ -8,9 +8,12 @@
   <% end %>
 </div>
 
-<%= form_with(model: Message.new, url: group_board_messages_path(group, board) ,local: true, html: {class: "message-form form-inline"}) do |form| %>
+<%= form_with(model: Message.new, url: group_board_messages_path(group, board) ,local: true, html: {class: "message-form form-inline my-1"}) do |form| %>
   <div class="form-group w-100 mx-0">
-    <%= form.text_field :content, placeholder: "輸入訊息", class: "col-9 form-control bg-secondary text-light" %>
-    <%= form.submit "Create", class:"col-3 btn btn-primary" %>
+    <%= form.text_field :content, placeholder: "輸入訊息", class: "message-input form-control bg-secondary text-light" %>
+
+    <%= button_tag(type: "submit", name: "commit", class: "message-btn btn rounded-circle mx-2") do %>
+      <i class="fas fa-paper-plane"></i>
+    <% end %>
   </div>
 <% end %>
