--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,9 @@
+<% if is_new_date?(message) %>
+  <div class="date-line text-center text-light">
+    - <%= message.created_at.strftime("%F") %> -
+  </div>
+<% end %>
+
 <div class="card mb-2 px-2 flex-row bg-dark text-light <%= 'me' if message.user == current_user %>">
   <div class="py-2 mr-2">
     <%= image_tag message.user.avatar.url, width: "40px", class: "rounded-circle" %>
