add board amd message policy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <% if notice %>
       <div class="alert alert-primary" role="alert">
-        <%= notice %>
+        <% notice %>
       </div>
     <% end %>
 
