add default avatar

--- a/app/views/messages/_new_message.html.erb
+++ b/app/views/messages/_new_message.html.erb
@@ -1,6 +1,6 @@
 <div class="card mb-2 px-2 flex-row bg-dark text-light sender">
   <div class="py-2 mr-2">
-    <%= image_tag message.user.avatar.url, width: "40px", class: "rounded-circle" %>
+    <%= image_tag message.user.avatar_url, width: "40px", class: "rounded-circle" %>
   </div>
 
   <div class="content">
