--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-secondary text-white border-bottom border-white fixed-top py-0" data-user="<%= session[:user_id] %>">
+<nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-secondary text-white border-bottom border-white w-100 py-0" data-user="<%= session[:user_id] %>">
   <a class="navbar-brand" href="#">Tiscord</a>
 
   <div class="navbar-nav ml-auto">
