--- a/app/views/boards/_board_list.html.erb
+++ b/app/views/boards/_board_list.html.erb
@@ -24,7 +24,7 @@
 <div class="board-items">
   <% if boards.present? %>
     <% boards.each do |board| %>
-      <%= link_to group_board_path(group, board), class: "d-block px-1" do %>
+      <%= link_to group_board_path(group.slug, board), class: "d-block px-1" do %>
         <div class="card bg-dark text-light border-0 my-1 py-1 px-2">
           <p class="m-0">#<%= board.name %></p>
         </div>
