--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,6 +26,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :invited_code %><br />
+    <%= f.text_field :invited_code, autocomplete: "invited code" %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
