--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,14 @@
 <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-secondary text-white border-bottom border-white w-100 py-0" data-user="<%= session[:user_id] %>">
   <a class="navbar-brand" href="#">Tiscord</a>
 
-  <div class="navbar-nav ml-auto">
+  <% if @group %>
+    <div class="navbar-nav m-auto">
+      <span class="nav-link text-light">群組: <%= @group.name %></span>
+      <span class="nav-link text-light">邀請碼：<%= @group.slug %></span>
+    </div>
+  <% end %>
+
+  <div class="navbar-nav mr-0">
     <% if user_signed_in? %>
       <%= link_to "登出", destroy_user_session_path, method: :delete, class:"nav-link" %>
     <% else %>
