refactor message with new date

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -9,16 +9,16 @@
 
       <div class="col-2">
         <div class="baord-list bg-dark border border-secondary h-100 overflow-auto">
-          <% if @group.present? %>
-            <%= render "/boards/board_list", group: @group, boards: @boards %>
+          <% if current_group.present? %>
+            <%= render "/boards/board_list", group: current_group, boards: @boards %>
           <% end %>
         </div>
       </div>
 
       <div class="col-9 overflow-auto">
         <div class="message-list bg-dark border border-secondary h-100 overflow-auto px-1">
-          <% if @board.present? %>
-            <%= render "/messages/message_list", group: @group, board: @board, messages: @messages %>
+          <% if current_board.present? %>
+            <%= render "/messages/message_list", group: current_group, board: current_board, messages: @messages %>
           <% end %>
         </div>
       </div>
