refactor message routes and helper

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,16 +1,17 @@
+<%# <% byebug %>
 <div id="main-content" class="w-100">
   <div class="container-fluid px-0">
     <div class="row no-gutters">
       <div class="col-1">
         <div class="group-list bg-dark h-100 overflow-auto">
-          <%= render "/groups/group_list", groups: @groups %>
+          <%= render "/groups/group_list", groups: all_groups %>
         </div>
       </div>
 
       <div class="col-2">
         <div class="baord-list bg-dark border border-secondary h-100 overflow-auto">
           <% if current_group.present? %>
-            <%= render "/boards/board_list", group: current_group, boards: @boards %>
+            <%= render "/boards/board_list", group: current_group, boards: all_boards %>
           <% end %>
         </div>
       </div>
