--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,8 +2,8 @@
   <h1 cal>Tiscord</h1>
 
   <div>
-    <%= render  "group_list", newgroup: @newgroup, groups: @groups %>
+    <%= render  "group_list", newgroup: @newgroup, groups: all_groups %>
   </div>
-  
-  
+
+
 </div>
