--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,4 +1,3 @@
-<%# <% byebug %>
 <div id="main-content" class="w-100">
   <div class="container-fluid px-0">
     <div class="row no-gutters">
@@ -10,16 +9,16 @@
 
       <div class="col-2">
         <div class="baord-list bg-dark border border-secondary h-100 overflow-auto">
-          <% if current_group.present? %>
-            <%= render "/boards/board_list", group: current_group, boards: all_boards %>
+          <% if @group.present? %>
+            <%= render "/boards/board_list", group: @group, boards: all_boards %>
           <% end %>
         </div>
       </div>
 
       <div class="col-9 overflow-auto">
         <div class="message-list bg-dark border border-secondary h-100 overflow-auto px-1">
-          <% if current_board.present? %>
-            <%= render "/messages/message_list", group: current_group, board: current_board, messages: @messages %>
+          <% if @board.present? %>
+            <%= render "/messages/message_list", group: @group, board: @board, messages: @messages %>
           <% end %>
         </div>
       </div>
